[Fix] z-index Kopfzeile

--- a/styles/kopfzeile.less
+++ b/styles/kopfzeile.less
@@ -5,7 +5,7 @@
 	width: 100%;
 	top: @kopfzeileAbstandvonoben;
 	left: 0px;
-	z-index: 200000;
+	z-index: 2000;
 }
 
 #dshKopfzeileI {
